--- a/package.json
+++ b/package.json
@@ -27,6 +27,7 @@
     "@web3-react/injected-connector": "^6.0.7",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
+    "react-hot-toast": "^2.4.0",
     "react-is": "^18.2.0",
     "react-router-dom": "^6.8.1",
     "react-scripts": "5.0.1",
