--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
     "@types/webextension-polyfill": "^0.9.1",
     "@web3-react/core": "^6.1.9",
     "@web3-react/injected-connector": "^6.0.7",
+    "ethers": "^6.0.8",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-hot-toast": "^2.4.0",
